[gd_scene format=3 uid="uid://c3yqb8xr7x0vq"]

[ext_resource type="Script" path="res://scripts/ui/stats.gd" id="1_stats"]

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stats")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -300.0
offset_right = 550.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "STATISTICS & ACHIEVEMENTS"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ContentRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="StatsSection" type="VBoxContainer" parent="Panel/VBoxContainer/ContentRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="StatsTitle" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Your Statistics"
theme_override_font_sizes/font_size = 18

[node name="BricksLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Bricks Broken: 0"

[node name="PowerUpsLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Power-ups Collected: 0"

[node name="LevelsLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Levels Completed: 0"

[node name="ComboLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Highest Combo: 0x"

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Highest Score: 0"

[node name="GamesLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Games Played: 0"

[node name="PerfectLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Perfect Clears: 0"

[node name="PlaytimeLabel" type="Label" parent="Panel/VBoxContainer/ContentRow/StatsSection"]
layout_mode = 2
text = "Total Playtime: 0h 0m"

[node name="AchievementsSection" type="VBoxContainer" parent="Panel/VBoxContainer/ContentRow"]
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="AchievementsTitle" type="Label" parent="Panel/VBoxContainer/ContentRow/AchievementsSection"]
layout_mode = 2
text = "Achievements"
theme_override_font_sizes/font_size = 18

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/ContentRow/AchievementsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ContentRow/AchievementsSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = -40.0
grow_vertical = 0
text = "Back to Menu"
